SESSION_NOTES: AL8b 批次记录
Co-Authored-By: Claude <noreply@anthropic.com>